[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[project]
name = "koapy"
version = "0.9.0"
description = "Kiwoom Open Api Plus Python"
readme = "README.rst"
requires-python = ">=3.8.1"
dependencies = [ "click (>=8.1.3,<9.0.0)", "cryptography (>=38.0.1,<39.0.0)", "deprecated (>=1.2.13,<2.0.0)", "discord.py (>=2.0.1,<3.0.0)", "exchange-calendars (>=4.2.3,<5.0.0)", "grpcio (==1.51.1)", "grpcio-tools (==1.51.1)", "lxml (>=4.9.1,<5.0.0)", "numpy (>=1.23.3,<2.0.0)", "openpyxl (>=3.0.10,<4.0.0)", "pandas (>=1.5.0,<2.0.0)", "psutil (>=5.9.0,<6.0.0)", "pygtrie (>=2.5.0,<3.0.0)", "pyhocon (>=0.3.59,<0.4.0)", "pytz (>=2022.4,<2023.0)", "QtPy (>=2.2.1,<3.0.0)", "requests (>=2.28.1,<3.0.0)", "Rx (>=3.2.0,<4.0.0)", "schedule (>=1.1.0,<2.0.0)", "Send2Trash (>=1.8.0,<2.0.0)", "SQLAlchemy (>=1.4.41,<2.0.0)", "tabulate (>=0.9.0,<0.10.0)", "tqdm (>=4.64.1,<5.0.0)", "tzlocal (>=4.2,<5.0)", "wrapt (>=1.14.1,<2.0.0)", "pywin32 (>=304,<305) ; sys_platform == \"win32\"", "pywinauto (>=0.6.8,<0.7.0) ; sys_platform == \"win32\"", "windows-curses (>=2.3.0,<3.0.0) ; sys_platform == \"win32\"", "typing-extensions (>=4.4.0,<5.0.0) ; python_version < \"3.10\"",]
[[project.authors]]
name = "Yunseong Hwang"
email = "kika1492@gmail.com"

[tool.black]
line-length = 88
force-exclude = "((.+)_pb2.py|(.+)_pb2_grpc.py)"

[project.license]
text = "MIT OR Apache-2.0 OR GPL-3.0-or-later"
